Keep migration plan fingerprint ordering stable